--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@clerk/nextjs": "^6.9.14",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-hover-card": "^1.1.4",
@@ -40,19 +41,24 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.1",
     "geist": "^1.3.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.473.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
